NextGenAppPackage/main/default/objects/Ingrediente__c/Ingrediente__c.object-meta.xml
<CustomObject>
    <label>Ingrediente</label>
    <nameField>
        <label>Ingrediente Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ingredientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>