NextGenAppPackage/main/default/objects/Ingrediente__c/fields/Estaci_n_recomendada__c.field-meta.xml
<CustomField>
    <fullName>Estaci_n_recomendada__c</fullName>
    <label>Estación recomendada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estacion</valueSetName>
    </valueSet>
</CustomField>