NextGenAppPackage/main/default/objects/Ingrediente__c/fields/Nivel_cal_rico__c.field-meta.xml
<CustomField>
    <fullName>Nivel_cal_rico__c</fullName>
    <label>Nivel calórico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>calorico</valueSetName>
    </valueSet>
</CustomField>